Bug 259839 - subtasks aren't displayed in the tasklist under their parent task
Summary: subtasks aren't displayed in the tasklist under their parent task
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: tasks (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-14 14:02 UTC by Ludwig Reiter
Modified: 2010-12-16 14:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-12-14 14:02:51 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

version: 2010-12-13 svn-1206065

Reproducible: Always

Steps to Reproduce:
1. Clean up task list.
2. Create three test tasks (e.g.s1-3)
3. Select the first task in the list.
4. Create Subtask (e.g. sub)
5. Look at the task list

Actual Results:  
The subtask is displayed below the last task.

Expected Results:  
The subtask should be displayed under the parent task.
Comment 1 Tobias Koenig 2010-12-14 15:33:43 UTC
SVN commit 1206476 by tokoe:

Fix the lessThan operator to do proper thread grouping
and resort model as soon as task status changes.

BUG: 259839


 M  +4 -0      mainview.cpp  
 M  +20 -8     taskthreadgroupercomparator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206476
Comment 2 Ludwig Reiter 2010-12-16 14:36:39 UTC
version: 2010-12-15 svn-1206816

the subtask is now under the parent task.