Fix the lessThan operator to do proper thread grouping and resort model as soon as task status changes.

BUG: 259839

svn path=/trunk/KDE/kdepim/mobile/; revision=1206476